# bi-integration-service

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
app/: .env.example
app/_gunicorn/: config.py
app/src/: config.py  main.py
app/src/features/big_integration/: auth.py  db.py  errors.py  http.py  responses.py  router.py
app/src/features/big_integration/ddu_flat_info_multiple/: deps.py  repo.py  router.py  service.py
app/src/features/big_integration/ddu_resident_agreement_status/: deps.py  repo.py  router.py  service.py
app/src/features/big_integration/repair_pack_prices/: deps.py  repo.py  router.py  service.py
app/src/features/big_integration/request_create_v3/: deps.py  repo.py  router.py  service.py
app/src/features/big_integration/request_event_v3/: deps.py  repo.py  router.py  service.py
app/src/features/installment/: auth.py  deps.py  openapi_examples.py  router.py  schemas.py
app/src/features/installment/ff/: client.py  repo.py  service.py
app/src/routers/: __init__.py  big_integration.py  config.py  v1.py
app/src/schema/: base.py
